Added color map based on HDI - not completely finished yet, added hdi_table1.tsv.

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>CS 519: Scientific Visualization</title>
 </head>
 <body>
-	<div class="mapContainer">
-		<svg width="960" height="600"></svg>
-	</div>
+    <h1>Random Map</h1>
+    <div id="random"></div>
+    <h1>HDI Map</h1>
+    <div id="hdi"></div>
+
 
 	<script src="https://d3js.org/d3.v4.min.js"></script>
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://d3js.org/topojson.v2.min.js"></script>
-	<script src ="index.js" ></script >
+	<script src="index.js"></script>
+    <script src="hdi.js"></script>
+
 </body>
 
