--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
 <meta charset="utf-8">
     <title>CS 519: Scientific Visualization</title>
 </head>
+<style>
+body {
+    width: 60%;
+    margin: auto;
+    padding-top: 10px;
+}
+</style>
 <body>
     <h1>Random Map</h1>
     <div id="random"></div>
     <h1>HDI Map</h1>
     <div id="hdi"></div>
 
-
-	<script src="https://d3js.org/d3.v4.min.js"></script>
-	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-	<script src="https://d3js.org/topojson.v2.min.js"></script>
-	<script src="index.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v2.min.js"></script>
+    <script src="index.js"></script>
     <script src="hdi.js"></script>
 
 </body>
