--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@ body {
     <div id="random"></div>
     <h1>HDI Map</h1>
     <div id="hdi"></div>
+    <h1>Multivariate Map</h1>
+    <div id="multivariate"></div>
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
     <script src="index.js"></script>
     <script src="hdi.js"></script>
-
+    <script src="multivariate.js"></script>
 </body>
 
