--- a/index.html
+++ b/index.html
@@ -11,14 +11,55 @@ body {
     margin: auto;
     padding-top: 10px;
 }
+
+.slider-ticks {
+  font: 10px sans-serif;
+}
+
+.slider-track,
+.track-inset,
+.track-overlay {
+  stroke-linecap: round;
+}
+
+.track {
+  stroke: #000;
+  stroke-opacity: 0.3;
+  stroke-width: 10px;
+}
+
+.track-inset {
+  stroke: #ddd;
+  stroke-width: 8px;
+}
+
+.track-overlay {
+  pointer-events: stroke;
+  stroke-width: 50px;
+  stroke: transparent;
+  cursor: crosshair;
+}
+
+.handle {
+  fill: #fff;
+  stroke: #000;
+  stroke-opacity: 0.5;
+  stroke-width: 1.25px;
+}
+
 </style>
 <body>
+
     <h1>Random Map</h1>
     <div id="random"></div>
+    <h1>Year Slider</h1>
+    <div id="slider"></div>
     <h1>HDI Map</h1>
     <div id="hdi"></div>
     <h1>Multivariate Map</h1>
     <div id="multivariate"></div>
+    
+    
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -26,5 +67,6 @@ body {
     <script src="index.js"></script>
     <script src="hdi.js"></script>
     <script src="multivariate.js"></script>
+    <script src="slider.js"></script>
 </body>
 
