--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ body {
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <script src="https://d3js.org/topojson.v2.min.js"></script>
+    <script src="events.js"></script>
     <script src="index.js"></script>
     <script src="hdi.js"></script>
     <script src="multivariate.js"></script>
