--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@ body {
   stroke-width: 1.25px;
 }
 
+.foreground path {
+  fill: none;
+  stroke: steelblue;
+}
+
+.axis text {
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
+}
 </style>
 <body>
 
@@ -58,8 +66,8 @@ body {
     <div id="hdi"></div>
     <h1>Multivariate Map</h1>
     <div id="multivariate"></div>
-    
-    
+    <h1>Parallel Coordinates</h1>
+    <div id="parallel"></div>
 
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
@@ -69,5 +77,7 @@ body {
     <script src="hdi.js"></script>
     <script src="multivariate.js"></script>
     <script src="slider.js"></script>
+    <script src="parallel.js"></script>
+
 </body>
 
