--- a/index.html
+++ b/index.html
@@ -2,119 +2,24 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="./css/index.css">
   <link rel="stylesheet" href="./css/global.css">
   <link rel="stylesheet" href="./css/mapSelector.css">
   <link rel="stylesheet" href="./css/componentSelector.css">
   <link rel="stylesheet" href="./css/countrySelector.css">
+  <link rel="stylesheet" href="./css/slider.css">
+  <link rel="stylesheet" href="./css/parallel.css">
+  <link rel="stylesheet" href="./css/hdi.css">
   <meta charset="utf-8">
   <title>CS 519: Scientific Visualization</title>
 </head>
 <style>
-body {
-    width: 70%;
-    margin: auto;
-    padding-top: 10px;
-}
-
-.slider-ticks {
-  font: 10px sans-serif;
-}
-
-.slider-track,
-.track-inset,
-.track-overlay {
-  stroke-linecap: round;
-}
-
-.track {
-  stroke: #000;
-  stroke-opacity: 0.3;
-  stroke-width: 10px;
-}
-
-.track-inset {
-  stroke: #ddd;
-  stroke-width: 8px;
-}
-
-.track-overlay {
-  pointer-events: stroke;
-  stroke-width: 50px;
-  stroke: transparent;
-  cursor: crosshair;
-}
-
-.handle {
-  fill: #fff;
-  stroke: #000;
-  stroke-opacity: 0.5;
-  stroke-width: 1.25px;
-}
-
-.foreground path {
-  fill: none;
-  stroke: steelblue;
-}
-
-.axis text {
-  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, 0 -1px 0 #fff, -1px 0 0 #fff;
-}
-
-#hdiController {
-  float:right;
-}
-#multivariateController {
-  float:right;
-}
-#mapSelector {
-  float:left;
-}
-#mapContainer {
-  clear: left;
-}
-#countrySelectorSection {
-  float: right;
-  clear: right;
-}
 </style>
 <body>
-  <div id="topPanel">
-    <div id="mapSelector">
-      <h1>Map Selector</h1>
-      <div class="item mapSelector-item__checked" name="mapSelector" value="hdi">HDI Map</div>
-      <div class="item" name="mapSelector" value="multivariate">Multivariate Map 2015</div>
-    </div>
-    <div id="hdiController">
-      <h1>HDI Map Year Slider</h1>
-      <div id="slider"></div>
-    </div>
-    <div id="multivariateController" style="width:300px;">
-        <h1>Component Selector</h1>
-        <div>
-          <div class="item componentSelector-menu">x axis: <span>Life expectancy at birth</span></div>
-          <div class="componentSelector-submenu">
-            <div class="componentSelector-submenu-item-checked item">Life expectancy at birth</div>
-            <div class="item">Expected years of schooling</div>
-            <div class="item">Mean years of schooling</div>
-            <div class="item">Gross national income (GNI) per capita</div>
-            <div class="item">GNI per capita rank minus HDI rank</div>
-          </div>
-        </div>
-        <div>
-          <div class="item componentSelector-menu">y axis: <span>Expected years of schooling</span></div>
-          <div class="componentSelector-submenu">
-            <div class="item">Life expectancy at birth</div>
-            <div class="componentSelector-submenu-item-checked item">Expected years of schooling</div>
-            <div class="item">Mean years of schooling</div>
-            <div class="item">Gross national income (GNI) per capita</div>
-            <div class="item">GNI per capita rank minus HDI rank</div>
-          </div>
-        </div>
-    </div>
-  </div>
+  
 
   <div id="countrySelectorSection">
-    <h1>Country Selector</h1>
+    <h3>COUNTRY SELECTOR</h3>
     <div id="countrySelectorContainer">
       <div id="countrySelector-searchbar">
         <input id="countrySelector-searchbar-input" placeholder="search country..." type="text"/>
@@ -122,25 +27,66 @@ body {
       <div id="countrySelector"></div>
     </div>
   </div>
-  <div id="mapContainer">
+  <div id="topPanel">
+    <div id="topPanelButton"><h3>CONTROLLERS</h3></div>
+    <div id="topPanelControllers">
+      <div id="mapSelector">
+        <h4>Map Selector</h4>
+        <div class="item mapSelector-item mapSelector-item__checked" name="mapSelector" value="hdi">HDI Map</div>
+        <div class="item mapSelector-item" name="mapSelector" value="multivariate">Multivariate Map 2015</div>
+      </div>
+      <div id="hdiController">
+        <h4>HDI Map Year Slider</h4>
+        <div id="slider"></div>
+      </div>
+      <div id="multivariateController">
+          <h4>Component Selector</h4>
+          <div>
+            <div class="item componentSelector-menu">x axis: <span>Life expectancy at birth</span></div>
+            <div class="componentSelector-submenu">
+              <div class="componentSelector-submenu-item-checked item">Life expectancy at birth</div>
+              <div class="item">Expected years of schooling</div>
+              <div class="item">Mean years of schooling</div>
+              <div class="item">Gross national income (GNI) per capita</div>
+              <div class="item">GNI per capita rank minus HDI rank</div>
+            </div>
+          </div>
+          <div>
+            <div class="item componentSelector-menu">y axis: <span>Expected years of schooling</span></div>
+            <div class="componentSelector-submenu">
+              <div class="item">Life expectancy at birth</div>
+              <div class="componentSelector-submenu-item-checked item">Expected years of schooling</div>
+              <div class="item">Mean years of schooling</div>
+              <div class="item">Gross national income (GNI) per capita</div>
+              <div class="item">GNI per capita rank minus HDI rank</div>
+            </div>
+          </div>
+      </div>
+    </div>
+  </div>
+  <div id="mapContainer"> 
     <div id="hdiContainer">
-      <h1>HDI Map</h1>
       <div id="hdi"></div>
     </div>
     <div id="multivariateContainer">
-      <h1>Multivariate Map</h1>
       <div id="multivariate"></div>
-    </div>
-    <div id="ParallelContainer">
-      <h1>Parallel Coordinates</h1>
-      <div id="parallel"></div>
-    </div>
+    </div> 
   </div>
+  <div id="parallelContainer">
+    <div id="arrowContainer">
+      <a href="#">
+        <span id="bottom" class="arrow"></span>
+      </a>
+    </div>
+    <div id="parallel"></div>
+  </div>
+
 
   <script src="https://d3js.org/d3.v4.min.js"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
   <script src="https://d3js.org/topojson.v2.min.js"></script>
   <script src="global.js"></script>
+   <script src="index.js"></script>
   <script src="hdi.js"></script>
   <script src="multivariate.js"></script>
   <script src="slider.js"></script>
