finish interaction with HDI map

--- a/index.html
+++ b/index.html
@@ -16,7 +16,22 @@
 <style>
 </style>
 <body>
-  
+  <div id="countryDetailInfo">
+    <h3>SELECTED: <span id="h3-country"></span></h3>
+    <div>
+      <h4>HDI in <span>1990</span></h4>
+      <p>value: <span id="span-value"></span></p>
+      <p>rank: <span id="span-rank"></span></p>
+    </div>
+    <div>
+      <h4>HDI and Components in 2015</h4>
+      <p>HDI: <span id="span-hdi"></span></p>
+      <p>LEB: <span id="span-leb"></span></p>
+      <p>EYS: <span id="span-eys"></span></p>
+      <p>MYS: <span id="span-mys"></span></p>
+      <p>GNI: <span id="span-gni"></span></p>
+    </div>
+  </div>
 
   <div id="countrySelectorSection">
     <h3>COUNTRY SELECTOR</h3>
