update on multivaraite map

--- a/index.html
+++ b/index.html
@@ -18,10 +18,15 @@
 <body>
   <div id="countryDetailInfo">
     <h3>SELECTED: <span id="h3-country"></span></h3>
-    <div>
-      <h4>HDI in <span>1990</span></h4>
+    <div id="hdiInfo">
+      <h4>HDI in <span id="span-year">1990</span></h4>
       <p>value: <span id="span-value"></span></p>
       <p>rank: <span id="span-rank"></span></p>
+    </div>
+    <div id="multivariateInfo">
+      <h4>Component of HDI</h4>
+      <p><span class="multivariate-key" id="multivariate-x-key"></span>:<span id="multivariate-x-value"></span><p>
+      <p><span class="multivariate-key" id="multivariate-y-key"></span>:<span id="multivariate-y-value"></span><p>
     </div>
     <div>
       <h4>HDI and Components in 2015</h4>
