Added radar chart

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./css/slider.css">
   <link rel="stylesheet" href="./css/parallel.css">
   <link rel="stylesheet" href="./css/hdi.css">
+  <link rel="stylesheet" href="./css/countryDetailInfo.css">
   <meta charset="utf-8">
   <title>CS 519: Scientific Visualization</title>
 </head>
@@ -38,11 +39,13 @@
     </div>
     <div>
       <h4>HDI and Components in 2015</h4>
-      <p>HDI: <span id="span-hdi"></span></p>
+      <div id="radarChart">
+      </div>
+<!--       <p>HDI: <span id="span-hdi"></span></p>
       <p>LEB: <span id="span-leb"></span></p>
       <p>EYS: <span id="span-eys"></span></p>
       <p>MYS: <span id="span-mys"></span></p>
-      <p>GNI: <span id="span-gni"></span></p>
+      <p>GNI: <span id="span-gni"></span></p> -->
     </div>
   </div>
 
@@ -114,5 +117,6 @@
   <script src="componentSelector.js"></script>
   <script src="countrySelector.js"></script>
   <script src="parallel.js"></script>
+  <script src="RadarChart.js"></script>
 </body>
 
